change index template

--- a/www/template.html
+++ b/www/template.html
@@ -10,7 +10,8 @@
 
     <!--<script type="text/javascript" src="js/jquery-1.11.1.js"></script>-->
     <!--<script type="text/javascript" src="js/function.js"></script>-->
-    <title>Ecommerce</title>
+    <title>Картины на досках в Украине. DOSHKI.COM</title>
+    <link rel="shortcut icon" type="image/png" href="/static-img/fav.png"/>
 </head>
 <body>
 
