final fix before production

--- a/www/template.html
+++ b/www/template.html
@@ -135,16 +135,16 @@
         <img src="/static-img/pre4.JPG"/>
     </div>
     <div class="examplesImages_item">
-        <img src="/static-img/pre5.JPG"/>
+        <img src="/static-img/pre5.jpg"/>
     </div>
     <div class="examplesImages_item">
-        <img src="/static-img/pre6.JPG"/>
+        <img src="/static-img/pre6.jpg"/>
     </div>
     <div class="examplesImages_item">
-        <img src="/static-img/pre7.JPG"/>
+        <img src="/static-img/pre7.jpg"/>
     </div>
     <div class="examplesImages_item">
-        <img src="/static-img/pre8.JPG"/>
+        <img src="/static-img/pre8.jpg"/>
     </div>
     <!--<img src="/static-img/pre9.jpg"/>-->
     <!--<img src="/static-img/pre10.JPG"/>-->
