--- a/www/template.html
+++ b/www/template.html
@@ -11,7 +11,7 @@
     <!--<script type="text/javascript" src="js/jquery-1.11.1.js"></script>-->
     <!--<script type="text/javascript" src="js/function.js"></script>-->
     <title>Картины на досках в Украине. DOSHKI.COM</title>
-    <link rel="shortcut icon" type="image/png" href="/static-img/fav.png"/>
+    <link rel="shortcut icon" type="image/png" href="/static-img/favicon.png"/>
 </head>
 <body>
 
