add mobile menu

--- a/www/template.html
+++ b/www/template.html
@@ -19,7 +19,7 @@
 <div id="modal-root" style="z-index: 99999999"></div>
 <div class="header fullWidth">
     <img src="/static-img/logo.png" alt="" class="header_logo">
-    <div class="header_items">
+    <div class="header_items" id="header_items">
         <a href="/#howWeMake" class="header_item">
             <span>Примеры</span>
         </a>
@@ -37,6 +37,9 @@
         </a>
     </div>
     <div class="header_number">+380989605008</div>
+    <div class="header_mobMenu" >
+        <img src="/static-img/hum.png" alt="" id="header_mobMenu">
+    </div>
 
 </div>
 <div class="hiBlock fullWidth backgroundImage"
