add mobile version

--- a/www/template.html
+++ b/www/template.html
@@ -743,8 +743,11 @@
                 <div class="bottomBlock_item_text">
                     <a href=""></a>
                 </div>
-                <img src="/static-img/logo.png"
-                     alt="" class="bottomBlock_itemIimg">
+                <div class="bottomBlock_itemIimg_wr">
+                    <img src="/static-img/logo.png"
+                         alt="" class="bottomBlock_itemIimg">
+                </div>
+
             </div>
         </div>
         <div class="bottomBlock_copy">© 2019 doshki.com | Все права защищены. Использование любых
