fix for whoWeAre block

--- a/www/template.html
+++ b/www/template.html
@@ -244,7 +244,7 @@
     <div class="examplesContBodyText">
         <div class="examplesContBodyTextTitle">Сочность оттенков</div>
         <div class="examplesContBodyTextContent"> Мы используем японские технологи для максимальной
-            точности передачи оттенков и цветов
+            точности передачи оттенков и цветов.
         </div>
     </div>
 </div>
