add google fonts

--- a/www/template.html
+++ b/www/template.html
@@ -12,6 +12,7 @@
     <!--<script type="text/javascript" src="js/function.js"></script>-->
     <title>Картины на досках в Украине. DOSHKI.COM</title>
     <link rel="shortcut icon" type="image/png" href="/static-img/favicon.png"/>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
 <body>
 
