fix mobile version

--- a/www/template.html
+++ b/www/template.html
@@ -366,7 +366,7 @@
                 <!--</div>-->
                 <!--<span>Бесплатная консультанция</span>-->
                 <!--</div>-->
-                <img class="processGetting_block_right_back" src="/static-img/backLitle.png" alt="">
+                <!--<img class="processGetting_block_right_back" src="/static-img/backLitle.png" alt="">-->
             </div>
         </div>
     </div>
