fix mobile version, v2

--- a/www/template.html
+++ b/www/template.html
@@ -237,7 +237,7 @@
             призентабельный вид, делают нашу упаковку надежной и красивой.
         </div>
     </div>
-    <img src="/static-img/2222.jpg" style="height: 400px">
+    <img src="/static-img/2222.jpg" >
 
 </div>
 <div class="examplesContBody">
