fix mobile version, v3

--- a/www/template.html
+++ b/www/template.html
@@ -656,7 +656,7 @@
         <div class="daBlock_title">
             Хотите Бесплатную обработку фото
             <br/>
-            и ее визуализация в интерьере!
+            и ее вид в интерьере!
         </div>
         <div class="daBlock_desc">Не знаете что из этого выйдет? Довертесь нашим дизайнерам!</div>
         <div class="daBlock_btn">
