fix mobile version, v4

--- a/www/template.html
+++ b/www/template.html
@@ -693,50 +693,19 @@
                     ИНФОРМАЦИЯ
                 </div>
                 <div class="bottomBlock_item_text">
-                    <a href="">Оплата</a>
+                    <a href="/#prep">Изготовление</a>
                 </div>
                 <div class="bottomBlock_item_text">
-                    <a href="">Доставка</a>
+                    <a href="/#howWeMake">Примеры</a>
                 </div>
                 <div class="bottomBlock_item_text">
-                    <a href="">Цены</a>
+                    <a href="/#quest">Вопросы</a>
                 </div>
                 <div class="bottomBlock_item_text">
-                    <a href="">Цены</a>
-                </div>
-            </div>
-            <div class="bottomBlock_item">
-                <div class="bottomBlock_item_title">
-                    ИНФОРМАЦИЯ
+                    <a href="/#price">Цены</a>
                 </div>
                 <div class="bottomBlock_item_text">
-                    <a href="">Оплата</a>
-                </div>
-                <div class="bottomBlock_item_text">
-                    <a href="">Доставка</a>
-                </div>
-                <div class="bottomBlock_item_text">
-                    <a href="">Цены</a>
-                </div>
-                <div class="bottomBlock_item_text">
-                    <a href="">Цены</a>
-                </div>
-            </div>
-            <div class="bottomBlock_item">
-                <div class="bottomBlock_item_title">
-                    ИНФОРМАЦИЯ
-                </div>
-                <div class="bottomBlock_item_text">
-                    <a href="">Оплата</a>
-                </div>
-                <div class="bottomBlock_item_text">
-                    <a href="">Доставка</a>
-                </div>
-                <div class="bottomBlock_item_text">
-                    <a href="">Цены</a>
-                </div>
-                <div class="bottomBlock_item_text">
-                    <a href="">Цены</a>
+                    <a href="/#yorPhoto">Ваше фото</a>
                 </div>
             </div>
             <div class="bottomBlock_item">
