--- a/www/template.html
+++ b/www/template.html
@@ -76,8 +76,8 @@
     <div class="container">
         <p class="whoWeAre_title">Ищешь оригинальный подарок и не хочешь быть похожим на остальных?
             Желаешь украсить интерьер и подчеркнуть стиль помещения, тогда ты попал по адресу.
-            Выбери любую фотографию со своего смарфона или интернета и отправь ее нам - увидешь
-            будующий результат, остальное мы сделаем сами!</p>
+            Выбери любую фотографию со своего смартфона или интернета и отправь ее нам - увидишь
+            будущий результат, остальное мы сделаем сами!</p>
     </div>
 </div>
 <a name="howWeMake"></a>
@@ -87,7 +87,7 @@
             Причины купить картины на дереве в Украине
         </div>
         <div class="howWeMake_description">
-            Наши картины будут смотреться хорошо в любом интреьере или подарят эмоции в качестве
+            Наши картины будут смотреться хорошо в любом интрьере или подарят эмоции в качестве
             подарка
         </div>
         <div class="howWeMake_blocks">
@@ -97,7 +97,7 @@
                        src="static-img/2.jpg"/>
                 <div class="howWeMake_blocks_item_desc">Не знаете что подарить? Хотите выделится и
                     не покупать один из сотни заезженных подарков, пылящихся на полках магазинов?
-                    Глядя на картины из дерева, близкие будут вспоминтаь вас и радоваться.
+                    Глядя на картины из дерева, близкие будут вспоминать вас и радоваться.
                 </div>
             </div>
             <div class="howWeMake_blocks_item">
@@ -115,7 +115,7 @@
                 <image class="howWeMake_blocks_item_img"
                        src="static-img/3.jpg"/>
                 <div class="howWeMake_blocks_item_desc">Хотите удивить своих клиентов и сотрудников
-                    яркими и со вкусом подобрынные изображениями, тогда мы вам поможем.
+                    яркими и со вкусом подобранными изображениями, тогда мы вам поможем.
                 </div>
             </div>
         </div>
@@ -196,8 +196,7 @@
                 <image class="howWeMake_blocks_item_img"
                        src="static-img/DR22.jpg"/>
                 <div class="howWeMake_blocks_item_desc">
-
-                    Оточенным многолетним опытом броб и ошибок способом мы наносим изображение на
+                    Отточенным многолетним опытом проб и ошибок способом мы наносим изображение на
                     дерево, закрепляем его и подготавливаем к следующему этапу.
                 </div>
             </div>
@@ -222,9 +221,8 @@
     <div class="examplesContBodyText">
         <div class="examplesContBodyTextTitle">Рельеф дерева</div>
         <div class="examplesContBodyTextContent">
-
             Каждая доска проходит процесс обжига, броширования и пропитки маслами, что помогает
-            древесине быть долговечней и естественней. Все эти манимупаляции придают дереву
+            древесине быть долговечней и естественней. Все эти манипуляции придают дереву
             уникальный рельеф.
         </div>
     </div>
@@ -234,7 +232,7 @@
         <div class="examplesContBodyTextTitle">Класная упаковка</div>
         <div class="examplesContBodyTextContent">
             Один из главнейших этапов - это упаковка, несколько слоев защиты и верхний
-            призентабельный вид, делают нашу упаковку надежной и красивой.
+            презентабельный  вид, делают нашу упаковку надежной и красивой.
         </div>
     </div>
     <img src="/static-img/2222.jpg" >
@@ -257,7 +255,7 @@
         </div>
         <div class="yourPhoto_description">
 
-            Вы можете заказать картины со своим изображением, просто отправте его нам, мы обработаем
+            Вы можете заказать картины со своим изображением, просто отправьте его нам, мы обработаем
             его и вы получите результат.
         </div>
         <div class="yourPhoto_examples">
@@ -392,7 +390,7 @@
                     изображения?</label>
                 <div class="accordion_target">
                     <p>
-                        Путем многолетних эксперементов мы добились максимальной цветопередачи и
+                        Путем многолетних экспериментов мы добились максимальной цветопередачи и
                         насыщенности цветов при переносе изображений с помощью УФ печати.
                     </p>
                 </div>
@@ -402,7 +400,7 @@
                 <label class="accordion_trigger" for="toggle-066">Срок изготовления?</label>
                 <div class="accordion_target">
                     <p>
-                        Мы изготавливаем картины за 5-6 рабочих дней.
+                        Мы изготавливаем картины за 3-4 рабочих дня.
                     </p>
                 </div>
             </li>
@@ -433,9 +431,9 @@
                 <label class="accordion_trigger" for="toggle-09">Как крепится?</label>
                 <div class="accordion_target">
                     <p>
-                        Все картины крепятся на толстую веревку, находящуюся сзади. В коплекте идут
-                        крепления для стены, за который можно зацепить веревку. Тяжелые картины
-                        крепятца на цепь или другой вид креплений.
+                        Все картины крепятся на толстую веревку, находящуюся сзади. В комплекте идут
+                        крепления для стены, за которые можно зацепить веревку. Тяжелые картины
+                        крепятся на цепь или другой вид креплений.
                     </p>
                 </div>
             </li>
@@ -453,7 +451,7 @@
                 <label class="accordion_trigger" for="toggle-11">Доставка</label>
                 <div class="accordion_target">
                     <p>
-                        Доставка осуществляется курьерской службой Новоя Почта, по всей Украине.
+                        Доставка осуществляется курьерской службой Новая Почта, по всей Украине.
                     </p>
                 </div>
             </li>
@@ -612,7 +610,7 @@
         Мы клиенто-ориентированная мастерская! Каждый второй человек приходит к нам повторно. Это
         говорит о многом. Уже несколько лет наша мастерская создает картины на досках в Украине.
         Сотни довольных клиентов. Сотни картин нашли своего ценителя. Каждый клиент нам очень важен,
-        так как продукция создается иммено для него, результат и качество превыше всего.
+        так как продукция создается именно для него, результат и качество превыше всего.
     </div>
 </div>
 <div class="orangeBlack">
