--- a/www/template.html
+++ b/www/template.html
@@ -10,7 +10,9 @@
 
     <!--<script type="text/javascript" src="js/jquery-1.11.1.js"></script>-->
     <!--<script type="text/javascript" src="js/function.js"></script>-->
-    <title>Картины на досках в Украине. DOSHKI.COM</title>
+    <title>DOSHKI.COM | Картины на дереве в Украине | Картины на досках Украина</title>
+    <meta name="description" content="Украинская магазин-фабрика изготовит картины на досках и дереве за 3 ДНЯ по вашим фото или из нашей коллекции!" />
+    <meta name="keywords" content="интернет-магазин картин, украинские картины, картины для интерьера, картины на дереве, картины на досках, doshki.com, картины украина, деревянные картины"/>
     <link rel="shortcut icon" type="image/png" href="/static-img/favicon.png"/>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic" rel="stylesheet">
 </head>
@@ -83,27 +85,27 @@
 <a name="howWeMake"></a>
 <div class="howWeMake fullWidth whoBuy">
     <div class="container">
-        <div class="howWeMake_title">
+        <h2 class="howWeMake_title">
             Причины купить картины на дереве в Украине
-        </div>
+        </h2>
         <div class="howWeMake_description">
             Наши картины будут смотреться хорошо в любом интрьере или подарят эмоции в качестве
             подарка
         </div>
         <div class="howWeMake_blocks">
             <div class="howWeMake_blocks_item">
-                <div class="howWeMake_blocks_item_title">Подарок для близких</div>
+                <h3 class="howWeMake_blocks_item_title">Подарок для близких</h3>
                 <image class="howWeMake_blocks_item_img"
-                       src="static-img/2.jpg"/>
+                       src="static-img/2.jpg" alt="Подарок для близких"/>
                 <div class="howWeMake_blocks_item_desc">Не знаете что подарить? Хотите выделится и
                     не покупать один из сотни заезженных подарков, пылящихся на полках магазинов?
                     Глядя на картины из дерева, близкие будут вспоминать вас и радоваться.
                 </div>
             </div>
             <div class="howWeMake_blocks_item">
-                <div class="howWeMake_blocks_item_title">Картины для интерьера</div>
+                <h3 class="howWeMake_blocks_item_title">Картины для интерьера</h3>
                 <image class="howWeMake_blocks_item_img"
-                       src="static-img/1_1.jpg"/>
+                       src="static-img/1_1.jpg" alt="Картины для интерьера"/>
                 <div class="howWeMake_blocks_item_desc">Деревянные картины из натурального материала
                     всегда будут гармонично и стильно вписываться в любом помещении. Подчеркнут ваш
                     вкус и любовь к природе.
@@ -111,9 +113,9 @@
                 </div>
             </div>
             <div class="howWeMake_blocks_item">
-                <div class="howWeMake_blocks_item_title">Для заведений и офисов</div>
+                <h3 class="howWeMake_blocks_item_title">Для заведений и офисов</h3>
                 <image class="howWeMake_blocks_item_img"
-                       src="static-img/3.jpg"/>
+                       src="static-img/3.jpg" alt="Картины на дереве для заведений и офисов"/>
                 <div class="howWeMake_blocks_item_desc">Хотите удивить своих клиентов и сотрудников
                     яркими и со вкусом подобранными изображениями, тогда мы вам поможем.
                 </div>
@@ -127,28 +129,28 @@
     <!--<img src="/static-img/81.jpg"/>-->
     <!--</div>-->
     <div class="examplesImages_item">
-        <img src="/static-img/pre1.jpg"/>
+        <img src="/static-img/pre1.jpg" alt="Картины на дереве в Украине"/>
     </div>
     <div class="examplesImages_item">
-        <img src="/static-img/pre2.JPG"/>
+        <img src="/static-img/pre2.JPG" alt="Картины на дереве в Украине"/>
     </div>
     <div class="examplesImages_item">
-        <img src="/static-img/pre3.JPG"/>
+        <img src="/static-img/pre3.JPG" alt="Картины на дереве в Украине"/>
     </div>
     <div class="examplesImages_item">
-        <img src="/static-img/pre4.JPG"/>
+        <img src="/static-img/pre4.JPG" alt="Картины на дереве в Украине"/>
     </div>
     <div class="examplesImages_item">
-        <img src="/static-img/pre5.jpg"/>
+        <img src="/static-img/pre5.jpg" alt="Картины на дереве в Украине"/>
     </div>
     <div class="examplesImages_item">
-        <img src="/static-img/pre6.jpg"/>
+        <img src="/static-img/pre6.jpg" alt="Картины на досках в Украине"/>
     </div>
     <div class="examplesImages_item">
-        <img src="/static-img/pre7.jpg"/>
+        <img src="/static-img/pre7.jpg" alt="Картины на досках в Украине"/>
     </div>
     <div class="examplesImages_item">
-        <img src="/static-img/pre8.jpg"/>
+        <img src="/static-img/pre8.jpg" alt="Картины на досках в Украине"/>
     </div>
     <!--<img src="/static-img/pre9.jpg"/>-->
     <!--<img src="/static-img/pre10.JPG"/>-->
@@ -161,7 +163,7 @@
 >
 
     <div class="buyNowContBodyText2">
-        <div class="buyNowContBodyTextTitle2">ПОДАРОК К ПРАЗДНИКУ</div>
+        <h2 class="buyNowContBodyTextTitle2">ПОДАРОК К ПРАЗДНИКУ</h2>
         <div class="buyNowContBodyTextContent2_cont" id="buyNow1">
             <!--<div class="buyNowContBodyTextContent2" >-->
             <!--<div class="buyNow2_arrow">-->
@@ -175,15 +177,15 @@
 </div>
 <div class="howWeMake fullWidth">
     <div class="container">
-        <div class="howWeMake_title">
+        <h2 class="howWeMake_title">
             Как мы делаем картины на досках в Украине
-        </div>
+        </h2>
         <div class="howWeMake_description">
             Каждую картину на досках мы делаем в ручную, придавая ей уникальность.
         </div>
         <div class="howWeMake_blocks">
             <div class="howWeMake_blocks_item">
-                <div class="howWeMake_blocks_item_title">Ручная обработка</div>
+                <h3 class="howWeMake_blocks_item_title">Ручная обработка</h3>
                 <image class="howWeMake_blocks_item_img"
                        src="static-img/DR1.jpg"/>
                 <div class="howWeMake_blocks_item_desc">Отобранная сосна проходит ручной процесс
@@ -192,7 +194,7 @@
                 </div>
             </div>
             <div class="howWeMake_blocks_item">
-                <div class="howWeMake_blocks_item_title">Нанесение картинки</div>
+                <h3 class="howWeMake_blocks_item_title">Нанесение картинки</h3>
                 <image class="howWeMake_blocks_item_img"
                        src="static-img/DR22.jpg"/>
                 <div class="howWeMake_blocks_item_desc">
@@ -201,7 +203,7 @@
                 </div>
             </div>
             <div class="howWeMake_blocks_item">
-                <div class="howWeMake_blocks_item_title">Лак, крепления, упаковка</div>
+                <h3 class="howWeMake_blocks_item_title">Лак, крепления, упаковка</h3>
                 <image class="howWeMake_blocks_item_img"
                        src="static-img/DR3.jpg"/>
                 <div class="howWeMake_blocks_item_desc">
@@ -217,9 +219,9 @@
 
 
 <div class="examplesContBody">
-    <img src="/static-img/111.jpg">
+    <img src="/static-img/111.jpg" alt="Укрианские картины на досках">
     <div class="examplesContBodyText">
-        <div class="examplesContBodyTextTitle">Рельеф дерева</div>
+        <h2 class="examplesContBodyTextTitle">Рельеф дерева</h2>
         <div class="examplesContBodyTextContent">
             Каждая доска проходит процесс обжига, броширования и пропитки маслами, что помогает
             древесине быть долговечней и естественней. Все эти манипуляции придают дереву
@@ -229,19 +231,19 @@
 </div>
 <div class="examplesContBody">
     <div class="examplesContBodyText">
-        <div class="examplesContBodyTextTitle">Класная упаковка</div>
+        <h2 class="examplesContBodyTextTitle">Класная упаковка</h2>
         <div class="examplesContBodyTextContent">
             Один из главнейших этапов - это упаковка, несколько слоев защиты и верхний
             презентабельный  вид, делают нашу упаковку надежной и красивой.
         </div>
     </div>
-    <img src="/static-img/2222.jpg" >
+    <img src="/static-img/2222.jpg" alt="Картрны на дереве">
 
 </div>
 <div class="examplesContBody">
     <img src="/static-img/333.jpg">
     <div class="examplesContBodyText">
-        <div class="examplesContBodyTextTitle">Сочность оттенков</div>
+        <h2 class="examplesContBodyTextTitle">Сочность оттенков</h2>
         <div class="examplesContBodyTextContent"> Мы используем японские технологи для максимальной
             точности передачи оттенков и цветов.
         </div>
@@ -250,9 +252,9 @@
 <a name="yorPhoto"></a>
 <div class="yourPhoto">
     <div class="container">
-        <div class="yourPhoto_title">
+        <h2 class="yourPhoto_title">
             Картина из вашей фотографии
-        </div>
+        </h2>
         <div class="yourPhoto_description">
 
             Вы можете заказать картины со своим изображением, просто отправьте его нам, мы обработаем
@@ -264,7 +266,7 @@
             <!--</div>-->
             <div class="grid yourPhoto_item">
                 <figure class="effect-bubba">
-                    <img src="/static-img/m1.jpg" alt="img02"/>
+                    <img src="/static-img/m1.jpg" alt="Картины на досках Украина"/>
                     <figcaption>
                         <h2>Ваше <span>Фото</span></h2>
                         <p>Загрузите изображение</p>
@@ -273,7 +275,7 @@
             </div>
             <div class="grid yourPhoto_item">
                 <figure class="effect-bubba">
-                    <img src="/static-img/m2.jpg" alt="img02"/>
+                    <img src="/static-img/m2.jpg" alt="alt="Картины на досках Украина""/>
                     <figcaption>
                         <h2>Изготовление <span>картины</span></h2>
                         <p>В максимальные сроки</p>
@@ -283,7 +285,7 @@
 
             <div class="grid yourPhoto_item">
                 <figure class="effect-bubba">
-                    <img src="/static-img/m3.jpg" alt="img02"/>
+                    <img src="/static-img/m3.jpg" alt="alt="Картины на досках Украина""/>
                     <figcaption>
                         <h2>Супер <span>Результат</span></h2>
                         <p>Качество мы гарантируем</p>
@@ -300,9 +302,9 @@
     <!--<img src="/static-img/tools3.png" alt=""-->
     <!--class="processGetting_block_right_tools">-->
     <div class="container">
-        <div class="processGetting_title">
+        <h2 class="processGetting_title">
             Как получить картину
-        </div>
+        </h2>
     </div>
     <div class="container fullWidth">
         <!--<div class="processGetting_title">-->
@@ -352,7 +354,7 @@
                             <li>- Эмоции от приятного подарка</li>
                         </ul>
                     </div>
-                    <image src="/static-img/ex.png" class="processGetting_block_left_item_img"/>
+                    <image src="/static-img/ex.png" class="processGetting_block_left_item_img" alt="Деревеные картины"/>
                 </div>
             </div>
             <div class="processGetting_block_center"></div>
@@ -372,7 +374,7 @@
 <a name="quest"></a>
 <div class="questions">
     <div class="container">
-        <div class="questions_title">Часто задаваемые вопросы:</div>
+        <h2 class="questions_title">Часто задаваемые вопросы:</h2>
         <ul class="accordion">
             <li class="accordion_item">
                 <input type="checkbox" class="accordion_toggle" id="toggle-05" checked hidden>
@@ -464,7 +466,7 @@
 >
 
     <div class="buyNowContBodyText2">
-        <div class="buyNowContBodyTextTitle2">ПОДАРОК ВТОРОЙ ПОЛОВИНЕ</div>
+        <h2 class="buyNowContBodyTextTitle2">ПОДАРОК ВТОРОЙ ПОЛОВИНЕ</h2>
         <div class="buyNowContBodyTextContent2_cont" id="buyNow2"></div>
         <!--<div class="buyNowContBodyTextContent2">-->
         <!--<div class="buyNow2_arrow">-->
@@ -476,10 +478,10 @@
     <!--<img src="/static-img/buy2.jpg">-->
 </div>
 <a name="price"></a>
-<img src="/static-img/tt.png" alt="" class="papeImages">
+<img src="/static-img/tt.png" class="papeImages" alt="Украина, картины на досках и дереве">
 <div class="price">
     <div class="price_container">
-        <div class="price_title">Цены картин на досках в Украине</div>
+        <h2 class="price_title">Цены картин на досках в Украине</h2>
         <div class="price_title_discount">Новогодняя скидка -40% на все!</div>
         <div class="price_prices">
             <div class="price_prices_squ">
@@ -571,7 +573,7 @@
 >
 
     <div class="buyNowContBodyText2">
-        <div class="buyNowContBodyTextTitle2">ПОДАРОК КОЛЛЕГЕ ИЛИ БОССУ</div>
+        <h2 class="buyNowContBodyTextTitle2">ПОДАРОК КОЛЛЕГЕ ИЛИ БОССУ</h2>
         <div class="buyNowContBodyTextContent2_cont" id="buyNow3"></div>
         <!--<div class="buyNowContBodyTextContent2">-->
         <!--<div class="buyNow2_arrow">-->
@@ -614,7 +616,7 @@
     </div>
 </div>
 <div class="orangeBlack">
-    <img class="orangeBlack_body" src="/static-img/orange.png"/>
+    <img class="orangeBlack_body" src="/static-img/orange.png" alt="Оранжевая полоса"/>
 </div>
 <div class="advantagesBlock">
     <img src="/static-img/tools2.png" alt=""
@@ -651,11 +653,11 @@
 
 >
     <div class="daBlock_container">
-        <div class="daBlock_title">
+        <h2 class="daBlock_title">
             Хотите Бесплатную обработку фото
             <br/>
             и ее вид в интерьере!
-        </div>
+        </h2>
         <div class="daBlock_desc">Не знаете что из этого выйдет? Довертесь нашим дизайнерам!</div>
         <div class="daBlock_btn">
             <div class="buyNowContBodyTextContent2_cont" id="buyNow6"></div>
