--- a/www/template.html
+++ b/www/template.html
@@ -275,7 +275,7 @@
             </div>
             <div class="grid yourPhoto_item">
                 <figure class="effect-bubba">
-                    <img src="/static-img/m2.jpg" alt="alt="Картины на досках Украина""/>
+                    <img src="/static-img/m2.jpg" alt="Картины на досках Украина"/>
                     <figcaption>
                         <h2>Изготовление <span>картины</span></h2>
                         <p>В максимальные сроки</p>
@@ -285,7 +285,7 @@
 
             <div class="grid yourPhoto_item">
                 <figure class="effect-bubba">
-                    <img src="/static-img/m3.jpg" alt="alt="Картины на досках Украина""/>
+                    <img src="/static-img/m3.jpg" alt="Картины на досках Украина"/>
                     <figcaption>
                         <h2>Супер <span>Результат</span></h2>
                         <p>Качество мы гарантируем</p>
