add new advantage block

--- a/www/template.html
+++ b/www/template.html
@@ -635,6 +635,8 @@
             <div class="advantagesBlock_list_item"><span class="blackColor">Ручная</span> и
                 аккуратная работа.
             </div>
+            <div class="advantagesBlock_list_item">Изготовлние за <span class="blackColor">3</span> дня
+            </div>
             <div class="advantagesBlock_list_item">Индивидуальный подход.</div>
             <div class="advantagesBlock_list_item">Гарантия <span class="blackColor">1</span> год на
                 все картины.
