change internal text

--- a/www/template.html
+++ b/www/template.html
@@ -278,7 +278,7 @@
                     <img src="/static-img/m2.jpg" alt="Картины на досках Украина"/>
                     <figcaption>
                         <h2>Изготовление <span>картины</span></h2>
-                        <p>В максимальные сроки</p>
+                        <p>В минимальные сроки</p>
                     </figcaption>
                 </figure>
             </div>
