--- a/www/template.html
+++ b/www/template.html
@@ -158,7 +158,7 @@
     <!--<img src="/static-img/pre12.jpg"/>-->
 </div>
 <a name="prep"></a>
-<div class="buyNow2 fullWidth backgroundImage"
+<div class="buyNow2 fullWidth backgroundImage mt60"
      style="background-image:url('/static-img/buy3.jpg')"
 >
 
