changed colors in landing

--- a/www/template.html
+++ b/www/template.html
@@ -477,12 +477,12 @@
     </div>
     <!--<img src="/static-img/buy2.jpg">-->
 </div>
-<a name="price"></a>
 <img src="/static-img/tt.png" class="papeImages" alt="Украина, картины на досках и дереве">
+<a name="price"></a>
 <div class="price">
     <div class="price_container">
         <h2 class="price_title">Цены картин на досках в Украине</h2>
-        <div class="price_title_discount">Новогодняя скидка -40% на все!</div>
+        <div class="price_title_discount">Сейчас действует скидка -40% на все!</div>
         <div class="price_prices">
             <div class="price_prices_squ">
                 <div class="price_prices_squ_title">ПРЯМОУГОЛЬНАЯ</div>
